--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.4",
+    "@strapi/strapi": "^5.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "mini-svg-data-uri": "^1.4.4",
