--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.4",
     "@strapi/strapi": "^5.7.0",
+    "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
+    "cobe": "^0.6.3",
+    "framer-motion": "^11.16.4",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.3",
     "qss": "^3.0.0",
