--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "framer-motion": "^11.16.4",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.17.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.3",
     "qss": "^3.0.0",
