--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-hover-card": "^1.1.4",
     "@strapi/strapi": "^5.7.0",
     "@tabler/icons-react": "^3.28.1",
+    "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "emailjs-com": "^3.2.0",
