--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.17.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.3",
+    "next-sitemap": "^4.2.3",
     "qss": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
