--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
